--- a/templates/index.html
+++ b/templates/index.html
@@ -120,6 +120,11 @@
                             <label for="schedule_Friday">Friday</label>
                             <textarea class="form-control" name="schedule_Friday" rows="1" placeholder="e.g., Physics, English"></textarea>
                         </div>
+                        <div class="form-group">
+                        <label for="schedule_Saturday">Saturday</label>
+                         <textarea class="form-control" name="schedule_Saturday" rows="1" placeholder="e.g., Workshop, Seminar"></textarea>
+                        </div>
+
                     </div>
                 </div>
             </div>
